Project got split into different packages. The code got cleaned except for concatenation of Stings. The xml part still has to be cleaned.