@@ -1,15 +1,17 @@
-package com.example.wheresmymoney;
+package com.example.wheresmymoney.Activities;
 
-import android.content.Intent;
-import android.support.v7.app.AppCompatActivity;
 import android.os.Bundle;
+import android.support.v7.app.AppCompatActivity;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
 import android.widget.EditText;
 import android.widget.ListView;
 import android.widget.TextView;
-import android.widget.Toast;
+
+import com.example.wheresmymoney.Model.Currency;
+import com.example.wheresmymoney.R;
+import com.example.wheresmymoney.Singleton.Global;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -43,7 +45,7 @@ public class EditCurrencyActivity extends AppCompatActivity
         super.onResume();
         newLink = Global.getInstance().getRecentCurrency().getLink();
         ListView list;
-        currenciesListData = new ArrayList<String>();
+        currenciesListData = new ArrayList<>();
         for (Currency currency : Global.getInstance().getCurrenciesList()) {
             if (!currency.isLinkedTo(Global.getInstance().getRecentCurrency())) {
                 currenciesListData.add(currency.getTag());
@@ -51,7 +53,7 @@ public class EditCurrencyActivity extends AppCompatActivity
         }
         list = findViewById(R.id.currenciesListView);
 
-        ArrayAdapter<String> adapter3 = new ArrayAdapter<String>(this,
+        ArrayAdapter<String> adapter3 = new ArrayAdapter<>(this,
                 android.R.layout.simple_list_item_1, currenciesListData);
         list.setAdapter(adapter3);
         list.setOnItemClickListener(new AdapterView.OnItemClickListener() {
@@ -84,14 +86,16 @@ public class EditCurrencyActivity extends AppCompatActivity
         try
         {
             linkRatio = new BigDecimal(ratioEdit.getText().toString());
+        } catch (Exception e) {
+            Global.getInstance().displayMessage("Incorrect format");
         }
-        catch (Exception e){}
 
         try
         {
-            pointPosition = new Integer(pointEdit.getText().toString());
+            pointPosition = Integer.valueOf(pointEdit.getText().toString());
+        } catch (Exception e) {
+            Global.getInstance().displayMessage("Incorrect format");
         }
-        catch (Exception e){}
 
         if(pointPosition>=0)
         {
